--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="~/images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon">
-    <title>@ViewBag.Title</title>
+    <title>viho - Premium Admin Template</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -26,7 +26,11 @@
     <!-- Feather icon-->
     <link rel="stylesheet" type="text/css" href="~/css/feather-icon.css">
     <!-- Plugins css start-->
+    <link rel="stylesheet" type="text/css" href="~/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="~/css/chartist.css">
+    <link rel="stylesheet" type="text/css" href="~/css/date-picker.css">
     <link rel="stylesheet" type="text/css" href="~/css/prism.css">
+    <link rel="stylesheet" type="text/css" href="~/css/vector-map.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css">
@@ -37,7 +41,8 @@
     <link rel="stylesheet" type="text/css" href="~/css/responsive.css">
 </head>
 
-<body class="dark-only">
+
+<body>
     <!-- Loader starts-->
     <div class="loader-wrapper">
         <div class="theme-loader">
@@ -91,36 +96,9 @@
                                 <li class="back-btn">
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                 </li>
-                                <li class="dropdown"><a class="nav-link menu-title" href="../theme/index.html" target="_blank"><i data-feather="home"></i><span>Dashboard</span></a></li>
-                                <li class="dropdown">
-                                    <a class="nav-link menu-title" href="javascript:void(0)"><i data-feather="anchor"></i><span>Starter kit</span></a>
-                                    <ul class="nav-submenu menu-content">
-                                        <li>
-                                            <a class="submenu-title" href="javascript:void(0)">color version<span class="sub-arrow"><i class="fa fa-chevron-right"></i></span></a>
-                                            <ul class="nav-sub-childmenu submenu-content">
-                                                <li><a href="index.html">Layout Light</a></li>
-                                                <li><a href="layout-dark.html">Layout Dark</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a class="submenu-title" href="javascript:void(0)">Page layout<span class="sub-arrow"><i class="fa fa-chevron-right"></i></span></a>
-                                            <ul class="nav-sub-childmenu submenu-content">
-                                                <li><a href="boxed.html">Boxed</a></li>
-                                                <li><a href="layout-rtl.html">RTL             </a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a class="submenu-title" href="javascript:void(0)">Footers<span class="sub-arrow"><i class="fa fa-chevron-right"></i></span></a>
-                                            <ul class="nav-sub-childmenu submenu-content">
-                                                <li><a href="footer-light.html">Footer Light</a></li>
-                                                <li><a href="footer-dark.html">Footer Dark</a></li>
-                                                <li><a href="footer-fixed.html">Footer Fixed</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a class="nav-link menu-title" href="http://support.pixelstrap.com/help-center" target="_blank"><i data-feather="headphones"></i><span>Raise Support</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" href="https://docs.pixelstrap.com/viho/document/" target="_blank"><i data-feather="file-text"></i><span>Documentation                                    </span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" href="Index"  ><span>Ana Sayfa</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" href="MusteriList"><span>Müşteriler</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" href="Stoklar" ><span>Ürünler</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -165,11 +143,14 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="~/js/script.js"></script>
+
     <!-- login js-->
     <!-- Plugin used-->
-    @RenderSection("Scripts", required: false)
+   
+   
     <div class="modal fade" id="Modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalContracts" aria-hidden="true"></div>
     <div class="modal fade" id="Modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalContracts" aria-hidden="true"></div>
     <div class="modal fade" id="Modal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalContracts" aria-hidden="true"></div>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
