--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
     <link rel="stylesheet" type="text/css" href="~/css/date-picker.css">
     <link rel="stylesheet" type="text/css" href="~/css/prism.css">
     <link rel="stylesheet" type="text/css" href="~/css/vector-map.css">
+    <link rel="stylesheet" type="text/css" href="~/css/datatables.css">
+    <link rel="stylesheet" type="text/css" href="~/css/owlcarousel.css">
+    <link rel="stylesheet" type="text/css" href="~/css/rating.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css">
@@ -97,8 +100,8 @@
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                 </li>
                                 <li class="dropdown"><a class="nav-link menu-title" href="Index"  ><span>Ana Sayfa</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" href="MusteriList"><span>Müşteriler</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" href="Stoklar" ><span>Ürünler</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" href="~/Musteri/MusteriList"><span>Müşteriler</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Stoklar" asp-action="Stoklar" ><span>Ürünler</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -143,7 +146,12 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="~/js/script.js"></script>
-
+    <script src="~/js/datatable/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/js/rating/jquery.barrating.js"></script>
+    <script src="~/js/rating/rating-script.js"></script>
+    <script src="~/js/owlcarousel/owl.carousel.js"></script>
+    <script src="~/js/ecommerce.js"></script>
+    <script src="~/js/product-list-custom.js"></script>
     <!-- login js-->
     <!-- Plugin used-->
    
