--- a/Views/Login/LoginPage.cshtml
+++ b/Views/Login/LoginPage.cshtml
@@ -5,33 +5,26 @@
   
 }
 
-  <body>
-    <!-- Loader starts-->
-    <div class="loader-wrapper">
-      <div class="theme-loader">    
-        <div class="loader-p"></div>
-      </div>
-    </div>
-    <!-- Loader ends-->
-    <!-- page-wrapper Start-->
+ 
+
     <section>         
       <div class="container-fluid p-0">
         <div class="row">
           <div class="col-12">
             <div class="login-card">
-              <form class="theme-form login-form">
+                    <form class="theme-form login-form" asp-controller="Login" asp-action="LoginPage" method="post">
                 <h4>Giriþ Sayfasý</h4>
                 <h6>Hoþgeldiniz! Hesabýnýza giriþ yapýn.</h6>
                 <div class="form-group">
                   <label>Mail Adresi</label>
                   <div class="input-group"><span class="input-group-text"><i class="icon-email"></i></span>
-                    <input class="form-control" type="email" required="" placeholder="Test@gmail.com">
+                                <input class="form-control" type="email" name="Email" required="" placeholder="Test@gmail.com">
                   </div>
                 </div>
                 <div class="form-group">
                   <label>Þifre</label>
                   <div class="input-group"><span class="input-group-text"><i class="icon-lock"></i></span>
-                    <input class="form-control" type="password" name="login[password]" required="" placeholder="*********">
+                                <input class="form-control" type="password" name="Password" required="" placeholder="*********">
                    @*  <div class="show-hide"><span class="show">                         </span></div> *@
                   </div>
                 </div>
@@ -52,10 +45,6 @@
       </div>
     </section>
 
-    
-
-  </body>
 <div class="logo-wrapper"><a asp-controller = "Home" asp-action = "Index"><img class="img-fluid" src="~/images/logo/logo.png" alt=""></a></div>
 
 
-</html>
