--- a/Views/Login/LoginPage.cshtml
+++ b/Views/Login/LoginPage.cshtml
@@ -32,19 +32,19 @@
                   <div class="checkbox">
                     <input id="checkbox1" type="checkbox">
                     <label for="checkbox1">Þifremi Hatýrla</label>
-                    </div><a class="link" href="forget-password.html">Parolanýzý mý unuttunuz??</a>
+                    </div><a class="link" href="forget-password.html">Parolanýzý mý unuttunuz?</a>
                 </div>
                 <div class="form-group">
                   <button class="btn btn-primary btn-block" type="submit">Giriþ Yap</button>
-                </div>
-                <p>Hesabýnýz yok mu? <a class ="ms-2" href="Login/SingUpPage">Hesap Oluþtur</a></p>
+                </div> 
+                <p>Hesabýnýz yok mu? <a class ="ms-2" href="Login/SignUpPage">Hesap Oluþtur</a></p>
               </form>
             </div>
           </div>
         </div>
       </div>
     </section>
+  
 
-<div class="logo-wrapper"><a asp-controller = "Home" asp-action = "Index"><img class="img-fluid" src="~/images/logo/logo.png" alt=""></a></div>
 
 
