--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,11 +77,9 @@
                 </div>
                 <div class="nav-right col pull-right right-menu p-0">
                     <ul class="nav-menus">
-                        <li><a class="text-dark" href="#!" onclick="javascript:toggleFullScreen()"><i data-feather="maximize"></i></a></li>
-                                       
-                        <li>
-                            <div class="mode"><i class="fa fa-moon-o"></i></div>
-                        </li>
+                        <li><a class="text-dark" href="#!" onclick="javascript:toggleFullScreen()"><i data-feather="maximize"></i></a></li>            
+                        <li><div class="mode"><i class="fa fa-moon-o"></i></div></li>
+                        <li class="onhover-dropdown p-0"> <button class="btn btn-primary-light" type="button"><a asp-controller="Login" asp-action="LogOut"><i data-feather="log-out"></i>Çıkış</a></button></li>
                    </ul>
                 </div>
                 <div class="d-lg-none mobile-toggle pull-right w-auto"><i data-feather="more-horizontal"></i></div>
@@ -99,8 +97,8 @@
                                 <li class="back-btn">
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                 </li>
-                                <li class="dropdown"><a class="nav-link menu-title" href="Index"  ><span>Ana Sayfa</span></a></li>
-                                <li class="dropdown"><a class="nav-link menu-title" href="~/Musteri/MusteriList"><span>Müşteriler</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Home" asp-action="Index"><span>Ana Sayfa</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Musteri" asp-action="MusteriList"><span>Müşteriler</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Stoklar" asp-action="Stoklar"><span>Ürünler</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="Users"><span>Kullanıcılar</span></a></li>
                             </ul>
