--- a/Views/Musteri/MusteriList.cshtml
+++ b/Views/Musteri/MusteriList.cshtml
@@ -1,13 +1,13 @@
+@* @model List<DataRow> *@
 @{
-    ViewData["Title"] = "Müşteri Listesi";
-
+   ViewData["Title"] = "Müşteri Listesi";
 }
 
     <div class="col-sm-12">
 
         <div class="card">
             <div class="card-header">
-                <h5>Müşteri Listesi</h5>
+                <h5>Müşteri Listesisads</h5>
             </div>
             <div class="table-responsive">
                 <table class="table table-hover">
@@ -22,46 +22,21 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Alexander</td>
-                            <td>Orton</td>
-                            <td>mdorton</td>
-                            <td>Admin</td>
-                            <td>USA</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>John Deo</td>
-                            <td>Deo</td>
-                            <td>johndeo</td>
-                            <td>User</td>
-                            <td>USA</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Randy Orton</td>
-                            <td>the Bird</td>
-                            <td>twitter</td>
-                            <td>admin</td>
-                            <td>UK</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td>Randy Mark</td>
-                            <td>Ottandy</td>
-                            <td>mdothe</td>
-                            <td>user</td>
-                            <td>AUS</td>
-                        </tr>
+      @*               @foreach (var musteri in Model)
+                    {
+
                         <tr>
                             <th scope="row">5</th>
-                            <td>Ram Jacob</td>
-                            <td>Thornton</td>
-                            <td>twitter</td>
-                            <td>admin</td>
-                            <td>IND</td>
+                            <td>@musteri["cari_kod"]</td>
+                            <td>@musteri["cari_unvan1"]</td>
+                            <td>@musteri["cari_EMail"]</td>
+                            <td>@musteri["cari_CepTel"]</td>
+                            <td>@musteri["cari_vdaire_adi"]</td>
+                            <td>@musteri["cari_vdaire_no"]</td>
+
                         </tr>
+                    } *@
+                    
                     </tbody>
                 </table>
             </div>
