--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -101,6 +101,8 @@
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Musteri" asp-action="MusteriList"><span>Müşteriler</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Stoklar" asp-action="Stoklar"><span>Ürünler</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="Users"><span>Kullanıcılar</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="CandidateUsers"><span>Aday Kullanıcılar</span></a></li>
+
                             </ul>
                         </div>
                     </div>
