--- a/Views/Users/UpdateUser.cshtml
+++ b/Views/Users/UpdateUser.cshtml
@@ -1,3 +1,5 @@
+@model B2B_Deneme.Models.User
+
 @{
     ViewBag.Title = "Kullanýcý Oluþtur";
    
@@ -8,40 +10,51 @@
         <div class="row m-0">
           <div class="col-12 p-0">    
             <div class="login-card">
-                    <form class="theme-form login-form" asp-controller="Users" asp-action="CreateUser" method="post">
-                        <input type="hidden" name="CreDate" value="@DateTime.Today.ToString("yyyy-MM-dd")">
+                    <form class="theme-form login-form" asp-controller="Users" asp-action="UpdateUser" method="post">
+                        <input type="hidden" name="UpdateDate" value="@DateTime.Today.ToString("yyyy-MM-dd")">
+                        <input type="hidden" name="UserID" value="@Model.UserId">
+
                 <h4>Kullanýcý Oluþtur</h4>
                 <div class="form-group">
                    <div class="small-group">
                     <div class="input-group"><span class="input-group-text"><i class="icon-user"></i></span>
-                                    <input class="form-control" name="Name" type="text" required="" placeholder="Adý">
+                                    <input class="form-control" name="Name" type="text" required="" placeholder="Adý" value="@Model.Name">
                     </div>
                     <div class="input-group"><span class="input-group-text"><i class="icon-user"></i></span>
-                                    <input class="form-control" name="Surname" type="text" required="" placeholder="Soyadý">
+                                    <input class="form-control" name="Surname" type="text" required="" placeholder="Soyadý" value="@Model.Surname">
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label>Email</label>
                   <div class="input-group"><span class="input-group-text"><i class="icon-email"></i></span>
-                                <input class="form-control" name="Email" type="email" required="" placeholder="Test@gmail.com">
+                                <input class="form-control" name="Email" type="email" required="" placeholder="Test@gmail.com" value="@Model.Email">
                   </div>
                 </div>
                 <div class="form-group">
                   <label>Parola</label>
                   <div class="input-group"><span class="input-group-text"><i class="icon-lock"></i></span>
-                    <input class="form-control" type="text" name="password" required="" >
+                                <input class="form-control" type="text" name="password" required="" value="@Model.Password">
                   </div>
                 </div>
-                 <div class="form-group">
+                        <div class="form-group">
                             <label>Admin Mi ?</label>
-                                <div class="">
+                            <div class="">
                                 <select name="IsAdmin" class="form-select form-control" id="bootstrap-notify-placement-from">
+                                    @if (Model.IsAdmin == false)
+                                    {
+                                        <option value="false">Hayýr</option>
+                                        <option value="true">Evet</option>
+                                        
+                                    }
+                                    else 
+                                    {
+                                    <option value="true">Evet</option>
                                     <option value="false">Hayýr</option>
-                                    <option value="true">Evet</option>                                       
-                                    </select>
-                                </div>   
-                </div>
+                                    }
+                                </select>
+                            </div>
+                        </div>
                 <div class="form-group">
                   <button class="btn btn-primary btn-block" type="submit">Kaydet</button>
                 </div>
